src/objects/Certification_Held__c.object
<CustomObject>
    <description>Used to track each time a contact achieves a certification.</description>
    <fields>
        <fullName>Certification__c</fullName>
        <description>Certification being achieved.</description>
        <label>Certification</label>
        <referenceTo>Certification__c</referenceTo>
        <relationshipLabel>Certifications Held</relationshipLabel>
        <relationshipName>Certifications_Held</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Certified_Professional_Name__c</fullName>
        <formula>HYPERLINK( Certified_Professional__r.Id, TRIM( Certified_Professional__r.FirstName &amp; &quot; &quot; &amp; Certified_Professional__r.LastName ), &quot;_self&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Certified Professional Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certified_Professional__c</fullName>
        <label>Certified Professional</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Technician</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Certifications Held</relationshipLabel>
        <relationshipName>Certifications_Held</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Achieved__c</fullName>
        <description>Date certification was achieved.</description>
        <label>Date Achieved</label>
        <type>Date</type>
    </fields>
    <label>Certification Held</label>
    <nameField>
        <displayFormat>CERTIFICATION-{00000}</displayFormat>
        <label>Certification Held Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certifications Held</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>